--- a/styles/homepage/navbar.css
+++ b/styles/homepage/navbar.css
@@ -6,6 +6,7 @@
   width: 100%;
   color: black;
   font-size: 16px;
+  background-color: transparent;
   position: relative;
 }
 
